--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Creativity 3 Project</title>
-    <link rel="stylesheet" href="main.css">
-    <script src="angular.js"></script>
+<link rel="stylesheet" href="main.css">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
+<script src="avatar.js"></script>
+  <meta charset="utf-8">
+  <title>User Avatar Template</title>
 </head>
 <body>
+  <div id="form" ng-app='app' ng-controller='mainCtrl'>
+    <h1>Create new user</h1>
+
+    <form name='userForm' ng-submit='addNew(userForm)'>
+      <input placeholder='Name' ng-model='userForm.name'/>
+      <br>
+      <input placeholder='Email' ng-model='userForm.email'/>
+      <br>
+      <input placeholder='Image Url' ng-model='userForm.url'/>
+      <br>
+      <button type='submit'>Add New</button>
+    </form>
     
+    <ul class='User-list'>
+      <li ng-repeat='user in users'>
+        <avatar user='user' />
+      </li>
+    </ul>
+  </div>
+  <style>
+    #form {
+      text-align: center;
+      font-family: helvetica;
+      border: 1px solid black;
+    }
+    
+    body{
+      background-image: url('bg.jpg');
+      background-size: cover;
+    }
+  </style>
 </body>
 </html>
