--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <title>User Avatar Template</title>
 </head>
-<body ng-app="myApp" ng-controller="todoCtrl">
+<body ng-app="myApp" ng-controller="imageCtrl">
     
     <h2>My Todo List</h2>
     
