--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
     
     <div ng-repeat="x in imageList">
-        <input type="checkbox" ng-model="x.done"> <span ng-bind="x.imageText"></span>
+        <input type="checkbox" ng-model="x.done"> <span ng-src="x.path"></span>
     </div>
 
     <p><button ng-click="remove()">Remove marked</button></p>
@@ -28,11 +28,6 @@
       text-align: center;
       font-family: helvetica;
       border: 1px solid black;
-    }
-    
-    body{
-      background-image: url('bg.jpg');
-      background-size: cover;
     }
   </style>
 </body>
